--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,33 @@
 {
     "version": "0.2.0",
     "configurations": [
+
         {
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-            "name": ".NET Core Launch (console)",
+            "name": ".NET Core Launch Debug (console)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
+            "preLaunchTask": "build Debug",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/UserInterface/bin/Debug/net6.0/UserInterface.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/UserInterface",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
+            // Use IntelliSense to find out which attributes exist for C# debugging
+            // Use hover for the description of the existing attributes
+            // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
+            "name": ".NET Core Launch Release (console)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build Release",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/UserInterface/bin/Release/net6.0/UserInterface.dll",
             "args": [],
             "cwd": "${workspaceFolder}/UserInterface",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
